# VNN-for-Lindblad-in-Python

./: README.md  pyproject.toml  setup.py
examples/: __init__.py  dissipative_ising1d.py
open_quantum_steady_state/: __init__.py  activations.py  ansatz.py  observables.py  operators.py  sampler.py  sr.py  trainer.py
open_quantum_steady_state.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_core.py
